--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,7 +19,10 @@
           "android": "Get a reading on Android",
           "huawei": "Get a reading on Huawei",
           "help": "Help",
-          "terms": "Terms of Use"
+          "terms": "Terms of Use",
+          "home":"Home",
+          "fortune":"Fortune Telling",
+          "login":"Log In"
         },
         "globalPresence": "Falcım Worldwide",
         "socialMedia": "Social Media",
