--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -19,7 +19,10 @@
           "android": "Android ile fal baktır",
           "huawei": "Huawei ile fal baktır",
           "help": "Yardım",
-          "terms": "Kullanım Şartları"
+          "terms": "Kullanım Şartları",
+          "home":"Anasayfa",
+          "fortune":"Fal Bak",
+          "login":"Giriş Yap"
         },
         "globalPresence": "Dünyada Falcım",
         "socialMedia": "Sosyal Medya",
