--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -20,13 +20,13 @@
         "huawei": "احصل على قراءة على Huawei",
         "help": "المساعدة",
         "terms": "شروط الاستخدام",
-        "home": "الرئيسية",
+        "home": "الصفحة الرئيسية",
         "fortune": "قراءة الطالع",
         "login": "تسجيل الدخول"
       },
-      "globalPresence": "فالسيم حول العالم",
+      "globalPresence": "فالسيم عالميًا",
       "socialMedia": "وسائل التواصل الاجتماعي",
-      "rights": "جميع الحقوق محفوظة. 2024، افنامال"
+      "rights": "جميع الحقوق محفوظة. 2024, afnamal"
     },
     "languages": {
       "turkish": "التركية",
@@ -40,30 +40,176 @@
         "title": "أنواع الطالع",
         "description": "يقدم موقعنا نوعين من خدمات قراءة الطالع:",
         "coffee": "طالع القهوة",
-        "coffeeDesc": "بناءً على تقليد قراءة طالع القهوة التركي. يمكنك إرسال صورة لكوبك بعد شرب القهوة.",
+        "coffeeDesc": "بناءً على تقليد قراءة طالع القهوة التركي. يمكنك إرسال صورة لكوبك بعد شرب قهوتك.",
         "palm": "قراءة الكف",
-        "palmDesc": "يمكنك الحصول على قراءة طالعك بإرسال صورة لكف يدك."
+        "palmDesc": "يمكنك الحصول على قراءة طالعك بإرسال صورة لكفك."
       },
       "membership": {
         "title": "إجراءات العضوية والتسجيل",
-        "description": "يجب عليك التسجيل أولاً للحصول على قراءة طالعك. بعد التسجيل، يمكنك تسجيل الدخول إلى النظام عبر 'تسجيل الدخول للأعضاء'."
+        "description": "يجب عليك التسجيل أولاً للحصول على قراءة طالعك. بعد التسجيل، يمكنك تسجيل الدخول إلى النظام عبر 'تسجيل دخول الأعضاء'."
       },
       "process": {
         "title": "عملية قراءة الطالع",
-        "description": "انقر على تبويب 'قراءة الطالع' للاختيار بين خيارات طالع القهوة أو قراءة الكف. بعد اتخاذ الاختيار، تحتاج إلى رفع صورة واضحة ومشرقة. تؤثر جودة الصورة مباشرةً على جودة قراءة الطالع."
-      },
-      "history": {
-        "title": "طوالع سابقة وتفاصيل العضوية",
+        "description": "انقر على تبويب 'قراءة الطالع' لاختيار بين خيارات قراءة طالع القهوة أو قراءة الكف. بعد اتخاذ الاختيار، تحتاج إلى تحميل صورة واضحة ومشرقة. تؤثر جودة الصورة مباشرة على جودة قراءة الطالع."
+      }
+    },
+    "history": {
+        "title": "الطوالع السابقة وتفاصيل العضوية",
         "description": "يمكنك الوصول إلى طوالعك السابقة تحت 'حسابي' في قسم 'الطوالع السابقة'. يمكنك أيضًا تحديث تفاصيل عضويتك في قسم 'معلومات العضوية'."
       },
       "contact": {
         "title": "معلومات الاتصال",
         "description": "للأسئلة أو لمزيد من المعلومات، يرجى التواصل معنا عبر البريد الإلكتروني:"
+      },
+      "terms": {
+        "title": "شروط الاستخدام وسياسة الخصوصية لموقع وتطبيق فالسيم",
+        "intro": "المستخدمون، بالاستفادة من الخدمات المقدمة على فالسيم سواء كانت بمقابل أو مجانًا أو بالدخول إلى الموقع أو التطبيق بأي شكل من الأشكال، يتعهدون مسبقًا بأنهم فوق سن 18 عامًا، أو إذا لم يكونوا بالسن القانوني، فإن لديهم موافقة قانونية من أولياء أمورهم أو وصيهم القانوني؛ وقد قرؤوا وفهموا ووافقوا بلا شروط على جميع بنود هذه الشروط. ويعتبر هؤلاء المستخدمون أنهم قبلوا أي تعديلات تجرى على أحكام هذه الشروط مسبقًا.",
+        "disclaimer": "تعليقات قراءة الطالع الموجودة في محتوى موقع وتطبيق فالسيم مُنتجة بالكامل لأغراض الترفيه والخيال. لا تتنبأ بالمستقبل ولا تحتوي على دقة. التعليقات الموجودة على فالسيم هي شكل من أشكال لغة قراءة الطالع التقليدية المقدمة لأغراض الحوار والترفيه. قد يسبب المحتوى الذي يقدمه المعلقون سوء فهم ويمكن أن يكون خطيرًا للأطفال والأفراد غير القادرين عقليًا.",
+        "ageRestriction": "يُنصح بألا يستخدم الأطفال دون سن 13 عامًا موقع وتطبيق فالسيم. يمكن للأطفال دون سن 13 استشارة أولياء أمورهم حول المواقع والتطبيقات التي يمكنهم استخدامها.",
+        "contentOwnership": "جميع المحتويات على موقع وتطبيق فالسيم خاضعة لقانون الأعمال الفكرية والفنية، وجميع أنواع الأصوات، الصور، الكتابات، الوثائق، وجميع الحقوق الفكرية والصناعية بما في ذلك جميع حقوق الملكية الفكرية والصناعية مملوكة لشركة فالسيم. تحمي قوانين الأعمال الفكرية والفنية والقانون الجنائي التركي بنية ومحتوى هذا الموقع والتطبيق، بما في ذلك جميع أنواع المواد البصرية المستخدمة في الموقع.",
+        "usageRestrictions": "لا يمكن تغيير، نسخ، إعادة إنتاج، ترجمة إلى لغة أخرى، إعادة نشر، تحميل على جهاز كمبيوتر آخر، نشر، نقل، عرض، أو توزيع أي نص موجود على موقع وتطبيق فالسيم بدون إذن مسبق وبدون ذكر المصدر، بما في ذلك الكود والبرمجيات.",
+        "registrationRequired": "لتصبح مستخدمًا لفالسيم، تحميل التطبيق وملء نموذج معلومات المستخدم بجميع التفاصيل المطلوبة بوضوح أمر إلزامي. يتعهد المستخدمون دون قيد أو شرط بدقة المعلومات المنقولة بهذه النماذج.",
+        "respectPrivacy": "يحترم فالسيم الحقوق الشخصية وحقوق الخصوصية لجميع المستخدمين. باستثناء الأسباب المكتوبة في المقالات وباستثناء مطالب السلطات القضائية، يتعهد بعدم تقديم المعلومات الشخصية لأي مؤسسة أو منظمة، بغض النظر عن السبب.",
+        "disclaimerDataBreach": "لا يتحمل فالسيم المسؤولية عن العواقب الناجمة عن الأفراد الخبيثين الذين يحصلون على معلومات المستخدم نتيجة لهجمات على قاعدة بياناته واستخدام هذه المعلومات بشكل خبيث."
+      },
+      "upload": {
+        "uploadingPhoto": "جاري تحميل الصورة...",
+        "successfulUpload": "تم تحميل الصورة بنجاح!",
+        "handPhoto": "تحميل صورة اليد",
+        "uploadPhoto": "تحميل صورة",
+        "uploadCupPhoto": "تحميل صورة الكوب",
+        "photoUploadedText": "تتم معالجة الصورة...",
+        "checkFortune": "تحقق من الطالع"
+      },
+      "altText": {
+        "uploadedPhoto": "الصورة المحملة",
+        "uploadCupPhoto": "تحميل صورة الكوب"
+      },
+      "errors": {
+        "modelNotLoaded": "النموذج لم يتم تحميله بعد. يرجى المحاولة مرة أخرى.",
+        "communicationError": "حدث خطأ أثناء التواصل مع الروبوت."
+      },
+      "chat": {
+        "palmReadingResult": "قراءة الكف: {content}",
+        "coffeeReadingResult": "قراءة طالع القهوة: {content}",
+        "botReply": "قراءة الكف: {content}",
+        "systemMessage": "أنت تتحدث مع خبير قراءة الكف؛ لا أجيب على الأسئلة، فقط أقرأ الكفوف.",
+        "userMessage": "اسمي {name}، من {location} وتاريخ ميلادي هو {birthdate}. أود منك قراءة كفي كما لو كان أمامك. يرجى صياغة الجمل كما يفعل عرّاف حقيقي وتقديم تنبؤات استنادًا إلى موقعي وعمري.",
+        "systemMessage2": "أنتِ الأخت العرافة، تنظرين فقط في فنجان القهوة، ولا تطرحين الأسئلة.",
+        "userMessage2": "اسمي {name}، أنا من {location} وتاريخ ميلادي هو {birthdate}. أريد منك قراءة فنجان قهوتي كما لو كان أمامك. صيغي الجمل كما لو كنتِ عرافة حقيقية. يمكنك إجراء تنبؤات استنادًا إلى موقعي وعمري، سواء كانت قصيرة أو طويلة الأمد."
+      },
+      "actions": {
+        "readPalm": "قراءة الكف"
+      },
+      "messages": {
+        "uploadPrompt": "مرحبًا، يرجى تحميل صورة لأقرأ طالعك.",
+        "loading": "جاري التحميل..."
+      },
+      "photoFeedback": {
+        "success": "يمكنك الآن أن تُخبر بطالعك!",
+        "failure": "لم يتم اكتشاف اليد. يرجى التقاط صورة أوضح."
+      },
+      "systemMessages": {
+        "loadingPhoto": "جارٍ تحميل الصورة...",
+        "modelNotLoaded": "لم يتم تحميل النموذج بعد. الرجاء المحاولة مرة أخرى.",
+        "fortuneReady": "توقعاتك جاهزة!",
+        "cupNotDetected": "لم يتم اكتشاف الكوب. الرجاء التقاط صورة أوضح.",
+        "errorSendingMessage": "حدث خطأ أثناء التواصل مع بوت توقعات القهوة."
+      },
+      "userPrompts": {
+        "initialPrompt": "مرحبًا، الرجاء تحميل صورة لأقرأ لك توقعاتك.",
+        "coffeeReadingRequest": "أريد منك أن تقرأ توقعات قهوتي كما لو كان هناك كوب أمامك. صيغ الجمل كما يفعل متنبئ حقيقي وقدم التوقعات بناءً على موقعي وعمري."
+      },
+      "updateInfo": {
+        "title": "تحديث معلوماتك",
+        "nameLabel": "الاسم",
+        "namePlaceholder": "أدخل اسمك",
+        "emailLabel": "البريد الإلكتروني (لا يمكن تغييره)",
+        "emailPlaceholder": "أدخل بريدك الإلكتروني",
+        "birthDateLabel": "تاريخ الميلاد",
+        "birthDatePlaceholder": "أدخل تاريخ ميلادك",
+        "locationLabel": "غير مدينتك",
+        "updateButton": "تحديث",
+        "passwordResetButton": "إرسال بريد إلكتروني لإعادة تعيين كلمة المرور",
+        "userInfoNotFound": "لم يتم العثور على معلومات المستخدم.",
+        "sessionNotFound": "لم يتم العثور على جلسة المستخدم. الرجاء تسجيل الدخول.",
+        "updateSuccess": "تم تحديث معلوماتك بنجاح",
+        "updateFailure": "حدث خطأ أثناء التحديث",
+        "resetMailSuccess": "تم إرسال بريد إلكتروني لإعادة تعيين كلمة المرور",
+        "resetMailFailure": "حدث خطأ أثناء إرسال بريد إلكتروني لإعادة تعيين كلمة المرور"
+      },
+      "forgotPassword": {
+        "title": "نسيت كلمة المرور",
+        "emailLabel": "عنوان البريد الإلكتروني",
+        "emailPlaceholder": "أدخل بريدك الإلكتروني",
+        "emailRequired": "الرجاء إدخال عنوان بريدك الإلكتروني.",
+        "submit": "إرسال",
+        "resetLinkSent": "تم إرسال رابط إعادة تعيين كلمة المرور إلى بريدك الإلكتروني!",
+        "resetFail": "فشل إرسال بريد إلكتروني لإعادة تعيين كلمة المرور: {error}"
+      },
+      "login": {
+        "title": "تسجيل الدخول",
+        "emailAddress": "عنوان البريد الإلكتروني",
+        "enterEmail": "أدخل بريدك الإلكتروني",
+        "password": "كلمة المرور",
+        "enterPassword": "أدخل كلمة المرور",
+        "forgotPassword": "نسيت كلمة المرور",
+        "logInButton": "تسجيل الدخول",
+        "resetPasswordButton": "إعادة تعيين كلمة المرور",
+        "emailRequired": "الرجاء إدخال عنوان بريدك الإلكتروني.",
+        "passwordRequired": "الرجاء إدخال كلمة المرور.",
+        "success": "تم تسجيل الدخول بنجاح!",
+        "invalidEmail": "عنوان البريد الإلكتروني غير صحيح.",
+        "failed": "فشل تسجيل الدخول: ",
+        "alreadyHaveAccount": "هل لديك حساب بالفعل؟",
+        "login": "تسجيل الدخول",
+        "noAccount": "لا تملك حساب؟",
+        "signup": "إنشاء حساب"
+      },
+      "alerts": {
+        "error": "حدث خطأ",
+        "unverified": "حسابك يحتاج إلى التحقق",
+        "verificationEmailSent": "تم إرسال بريد التحقق.",
+        "resetLinkSent": "تم إرسال بريد إعادة التعيين."
+      },
+      "navigation": {
+        "coffeeFortune": "توقعات القهوة",
+        "palmReading": "قراءة الكف"
+      },
+      "pastReadings": {
+        "title": "توقعاتك السابقة",
+        "noReadings": "لم يتم تسجيل أي توقعات بعد.",
+        "hideDetails": "إخفاء التفاصيل",
+        "viewDetails": "عرض التفاصيل",
+        "cardImageAlt": "صورة التوقع"
+      },
+      "signup": {
+        "title": "إنشاء حساب",
+        "namePlaceholder": "أدخل اسمك",
+        "emailPlaceholder": "أدخل بريدك الإلكتروني",
+        "passwordPlaceholder": "أدخل كلمة المرور",
+        "birthDatePlaceholder": "اختر تاريخ ميلادك",
+        "locationPlaceholder": "اختر مدينة",
+        "submit": "إنشاء الحساب",
+        "nameLabel": "الاسم",
+        "emailLabel": "البريد الإلكتروني",
+        "passwordLabel": "كلمة المرور",
+        "birthDateLabel": "تاريخ الميلاد",
+        "locationLabel": "الموقع"
+      },
+      "dashboard": {
+        "pastReadings": "توقعاتي السابقة",
+        "membershipInfo": "معلومات العضوية"
+      },
+      "logout": {
+        "success": "تم تسجيل الخروج بنجاح!"
+      },
+      "fortuneTypes": {
+        "coffee": "توقعات القهوة",
+        "palm": "قراءة الكف"
       }
-    },
-    "terms": {
-      "title": "شروط الاستخدام وسياسة الخصوصية لموقع وتطبيق فالسيم",
-      "intro": "المستخدمون، من خلال الاستفادة من الخدمات المقدمة على فالسيم سواء بمقابل أو مجانًا أو بالوصول إلى الموقع أو التطبيق بأي شكل من الأشكال، يتعهدون مسبقًا بأنهم فوق 18 عامًا، أو إذا كانوا دون السن القانونية، فإن لديهم موافقة قانونية من أولياء أمورهم أو الوصي عليهم؛ وأنهم قرؤوا وفهموا ووافقوا دون قيد أو شرط على جميع شروط هذه الشروط الاستخدام. ويعتبر هؤلاء المستخدمون أنهم قبلوا أي تعديلات تُجرى على أحكام هذه شروط الاستخدام مسبقًا."
-    }
+      
+      
   }
+  
   
