--- a/src/locales/gr.json
+++ b/src/locales/gr.json
@@ -2,15 +2,15 @@
     "navbar": {
       "login": "Σύνδεση",
       "account": "Ο Λογαριασμός μου",
-      "fortune": "Μαντεία",
+      "fortune": "Μαντική Τέχνη",
       "terms": "Όροι Χρήσης",
       "help": "Βοήθεια",
       "logout": "Αποσύνδεση"
     },
     "features": {
-      "takePhoto": "Βγάλτε φωτογραφίες του κυπέλλου σας",
-      "enterInfo": "Καταχωρίστε τα στοιχεία σας εύκολα",
-      "getReading": "Αφήστε τον ερμηνευτή σας να το αναλύσει ακαριαία"
+      "takePhoto": "Βγάλτε φωτογραφίες του φλιτζανιού σας",
+      "enterInfo": "Εισάγετε τα στοιχεία σας εύκολα",
+      "getReading": "Αφήστε τον ερμηνευτή σας να τα αναλύσει αμέσως"
     },
     "footer": {
       "brand": "Φαλκίμ",
@@ -20,13 +20,13 @@
         "huawei": "Λάβετε μια ανάγνωση στο Huawei",
         "help": "Βοήθεια",
         "terms": "Όροι Χρήσης",
-        "home": "Αρχική Σελίδα",
-        "fortune": "Μαντεία",
+        "home": "Αρχική",
+        "fortune": "Μαντική Τέχνη",
         "login": "Σύνδεση"
       },
-      "globalPresence": "Παγκόσμια Παρουσία του Φαλκίμ",
+      "globalPresence": "Παγκόσμια Παρουσία Φαλκίμ",
       "socialMedia": "Κοινωνικά Δίκτυα",
-      "rights": "Όλα τα δικαιώματα είναι επιφυλαχθεί. 2024, afnamal"
+      "rights": "Όλα τα δικαιώματα διατηρούνται. 2024, afnamal"
     },
     "languages": {
       "turkish": "Τούρκικα",
@@ -38,28 +38,175 @@
       "title": "Βοήθεια και Οδηγός Χρήστη",
       "fortuneTypes": {
         "title": "Τύποι Μαντείας",
-        "description": "Η ιστοσελίδα μας προσφέρει δύο τύπους υπηρεσιών μαντείας:",
+        "description": "Ο ιστότοπός μας προσφέρει δύο τύπους υπηρεσιών μαντείας:",
         "coffee": "Μαντεία Καφέ",
-        "coffeeDesc": "Βασισμένο στην παραδοσιακή μαντεία τούρκικου καφέ. Μπορείτε να μας στείλετε μια φωτογραφία του φλιτζανιού σας μετά τον καφέ σας.",
+        "coffeeDesc": "Βασίζεται στην παραδοσιακή μαντεία τούρκικου καφέ. Μπορείτε να μας στείλετε φωτογραφία του φλιτζανιού σας μετά τον καφέ σας.",
         "palm": "Χειρομαντεία",
-        "palmDesc": "Μπορείτε να λάβετε μια χειρομαντεία αποστέλλοντας μια φωτογραφία της παλάμης σας."
+        "palmDesc": "Μπορείτε να έχετε την μαντεία σας με την αποστολή μιας φωτογραφίας της παλάμης σας."
       },
       "membership": {
-        "title": "Διαδικασίες Μέλους και Σύνδεσης",
-        "description": "Πρέπει πρώτα να εγγραφείτε για να λάβετε τη μαντεία σας. Μετά την εγγραφή, μπορείτε να συνδεθείτε στο σύστημα μέσω 'Σύνδεση Μέλους'."
+        "title": "Διαδικασίες Συνδρομής και Σύνδεσης",
+        "description": "Πρέπει πρώτα να εγγραφείτε για να λάβετε την μαντεία σας. Μετά την εγγραφή, μπορείτε να συνδεθείτε στο σύστημα μέσω 'Σύνδεση Μέλους'."
       },
       "process": {
         "title": "Η Διαδικασία Μαντείας",
-        "description": "Κάντε κλικ στην καρτέλα 'Διαβάστε τη Μαντεία' για να επιλέξετε μεταξύ των επιλογών μαντείας καφέ ή χειρομαντείας. Μετά την επιλογή σας, πρέπει να ανεβάσετε μια φωτεινή και καθαρή φωτογραφία. Η ποιότητα της φωτογραφίας επηρεάζει άμεσα την ποιότητα της μαντείας."
-      },
-      "history": {
-        "title": "Παλιές Μαντείες και Λεπτομέρειες Μελών",
-        "description": "Μπορείτε να αποκτήσετε πρόσβαση στις προηγούμενες μαντείες σας υπό την καρτέλα 'Ο Λογαριασμός μου' στην ενότητα 'Παλιές Μαντείες'. Επίσης, μπορείτε να ενημερώσετε τις λεπτομέρειες της συνδρομής σας στην ενότητα 'Πληροφορίες Μέλους'."
+        "description": "Κάντε κλικ στην καρτέλα 'Διαβάστε Μαντεία' για να επιλέξετε ανάμεσα στις επιλογές μαντείας καφέ ή χειρομαντείας. Μετά την επιλογή σας, πρέπει να ανεβάσετε μια φωτεινή και καθαρή φωτογραφία. Η ποιότητα της φωτογραφίας επηρεάζει άμεσα την ποιότητα της μαντείας."
+      }
+    },
+    "history": {
+        "title": "Παρελθούσες Τύχες και Στοιχεία Συνδρομής",
+        "description": "Μπορείτε να προσπελάσετε τις προηγούμενες τύχες σας μέσω του λογαριασμού σας στην ενότητα 'Παρελθούσες Τύχες'. Μπορείτε επίσης να ενημερώσετε τα στοιχεία της συνδρομής σας στην ενότητα 'Πληροφορίες Συνδρομής'."
       },
       "contact": {
-        "title": "Πληροφορίες Επικοινωνίας",
-        "description": "Για ερωτήσεις ή περισσότερες πληροφορίες, παρακαλώ επικοινωνήστε μαζί μας μέσω email: "
+        "title": "Στοιχεία Επικοινωνίας",
+        "description": "Για ερωτήσεις ή περισσότερες πληροφορίες, παρακαλούμε επικοινωνήστε μαζί μας μέσω email: "
+      },
+      "terms": {
+        "title": "Όροι Χρήσης και Πολιτική Απορρήτου του Ιστότοπου και Εφαρμογής FALCIM",
+        "intro": "Οι χρήστες, επωφελούμενοι από τις υπηρεσίες που προσφέρονται στο FALCIM, είτε έναντι αμοιβής είτε δωρεάν, ή προσπελαύνοντας τον ιστότοπο ή την εφαρμογή με οποιονδήποτε τρόπο, αναλαμβάνουν εκ των προτέρων ότι είναι άνω των 18 ετών ή, αν είναι ανήλικοι, διαθέτουν τη νόμιμη συγκατάθεση των γονιών ή κηδεμόνων τους· και έχουν διαβάσει, κατανοήσει πλήρως και αποδεχτούν ανεπιφύλακτα και συμφωνούν με όλους τους όρους αυτών των Όρων Χρήσης. Θεωρείται ότι έχουν αποδεχτεί εκ των προτέρων οποιαδήποτε τροποποίηση στις διατάξεις αυτών των Όρων Χρήσης του Ιστότοπου.",
+        "disclaimer": "Τα σχόλια μαντείας που περιέχονται στο περιεχόμενο του ιστότοπου και της εφαρμογής FALCIM παράγονται αποκλειστικά για σκοπούς διασκέδασης με φαντασία. Δεν προβλέπουν το μέλλον και δεν περιέχουν ακρίβεια. Τα σχόλια που γίνονται στο FALCIM αποτελούν μορφή παραδοσιακής γλώσσας μαντείας που παρουσιάζεται για συζήτηση και διασκεδαστικούς σκοπούς. Το περιεχόμενο που παρέχεται από τους σχολιαστές μπορεί να προκαλέσει παρεξηγήσεις και μπορεί να είναι επικίνδυνο για παιδιά και ανίκανα άτομα.",
+        "ageRestriction": "Συνιστάται τα παιδιά κάτω των 13 ετών να μη χρησιμοποιούν τον ιστότοπο και την εφαρμογή FALCIM. Τα παιδιά κάτω των 13 ετών μπορούν να συμβουλευτούν τους γονείς τους για το ποιους ιστότοπους και εφαρμογές μπορούν να χρησιμοποιήσουν.",
+        "contentOwnership": "Όλα τα περιεχόμενα στον ιστότοπο και την εφαρμογή FALCIM υπόκεινται στον Νόμο περί Πνευματικών και Καλλιτεχνικών Έργων, και όλα τα είδη ήχου, εικόνων, γραπτών, εγγράφων και όλα τα είδη πνευματικών και βιομηχανικών δικαιωμάτων συμπεριλαμβανομένων όλων των πνευματικών και βιομηχανικών δικαιωμάτων πνευματικής ιδιοκτησίας ανήκουν στην Falcım A.Ş. Η δομή και το περιεχόμενο αυτού του ιστότοπου και της εφαρμογής, συμπεριλαμβανομένων όλων των τύπων οπτικών υλικών που χρησιμοποιούνται στον ιστότοπο, προστατεύονται βάσει του Νόμου περί Πνευματικών και Καλλιτεχνικών Έργων και του Ποινικού Κώδικα της Τουρκίας.",
+        "usageRestrictions": "Κανένα κείμενο που βρίσκεται στον ιστότοπο και την εφαρμογή FALCIM δεν μπορεί να τροποποιηθεί, αντιγραφεί, αναπαραχθεί, μεταφραστεί σε άλλη γλώσσα, επαναδημοσιευτεί, ανεβεί σε άλλον υπολογιστή, αναρτηθεί, μεταδοθεί, παρουσιαστεί ή διανεμηθεί χωρίς προηγούμενη άδεια και χωρίς να αναφέρεται η πηγή, συμπεριλαμβανομένων κωδικού και λογισμικού.",
+        "registrationRequired": "Για να γίνετε ΧΡΗΣΤΗΣ του FALCIM, είναι υποχρεωτικό να κατεβάσετε την εφαρμογή και να συμπληρώσετε τη φόρμα πληροφοριών χρήστη με όλες τις απαιτούμενες λεπτομέρειες σαφώς. ΟΙ ΧΡΗΣΤΕΣ αναλαμβάνουν ανεπιφύλακτα την ακρίβεια των πληροφοριών που μεταδίδονται με αυτές τις φόρμες.",
+        "respectPrivacy": "Το FALCIM σέβεται τα προσωπικά δικαιώματα και τα δικαιώματα απορρήτου όλων των ΧΡΗΣΤΩΝ. Εξαιρουμένων των λόγων που γράφονται στα άρθρα και εκτός από τις απαιτήσεις των δικαστικών αρχών, αναλαμβάνει να μην παρέχει προσωπικές πληροφορίες σε καμία ίδρυμα ή οργανισμό, ανεξαρτήτως του λόγου.",
+        "disclaimerDataBreach": "Το FALCIM δεν αποδέχεται ευθύνη για τις συνέπειες που προκύπτουν από κακόβουλα άτομα που λαμβάνουν πληροφορίες ΧΡΗΣΤΗ σαν αποτέλεσμα επιθέσεων στη βάση δεδομένων του και την κακόβουλη χρήση αυτών των πληροφοριών."
+      },
+      "upload": {
+        "uploadingPhoto": "Ανεβάζοντας φωτογραφία...",
+        "successfulUpload": "Η φωτογραφία ανέβηκε επιτυχώς!",
+        "handPhoto": "Ανέβασμα Φωτογραφίας Χεριού",
+        "uploadPhoto": "Ανέβασμα Φωτογραφίας",
+        "uploadCupPhoto": "Ανέβασμα Φωτογραφίας Κούπας",
+        "photoUploadedText": "Η φωτογραφία αναλύεται...",
+        "checkFortune": "Έλεγχος Μαντείας"
+      },
+      "altText": {
+        "uploadedPhoto": "Ανεβασμένη Φωτογραφία",
+        "uploadCupPhoto": "Ανέβασμα Φωτογραφίας Κούπας"
+      },
+      "errors": {
+        "modelNotLoaded": "Το μοντέλο δεν έχει φορτωθεί ακόμη. Παρακαλώ δοκιμάστε ξανά.",
+        "communicationError": "Προέκυψε σφάλμα κατά την επικοινωνία με το Chatbot."
+      },
+      "chat": {
+        "palmReadingResult": "Ανάγνωση Παλάμης: {content}",
+        "coffeeReadingResult": "Ανάγνωση Καφέ: {content}",
+        "botReply": "Ανάγνωση Παλάμης: {content}",
+        "systemMessage": "Συνομιλείτε με τον ειδικό ανάγνωσης παλάμης· δεν απαντώ σε ερωτήσεις, μόνο διαβάζω παλάμες.",
+        "userMessage": "Το όνομά μου είναι {name}, από {location} και η ημερομηνία γέννησής μου είναι {birthdate}. Θα ήθελα να διαβάσετε την παλάμη μου σαν να ήταν μπροστά σας. Παρακαλώ διατυπώστε προβλέψεις όπως ένας πραγματικός μάντης βάσει της τοποθεσίας και της ηλικίας μου.",
+        "systemMessage2": "Είσαι η αδερφή μάντισσα, μόνο καφεμαντείες κάνεις, δεν κάνεις ερωτήσεις.",
+        "userMessage2": "Το όνομά μου είναι {name}, είμαι από {location} και η ημερομηνία γέννησής μου είναι {birthdate}. Θέλω να διαβάσεις τη μαντεία του καφέ μου σαν να ήταν το φλιτζάνι του καφέ μου μπροστά σου. Διατύπωσε προτάσεις όπως ένας πραγματικός μάντης. Μπορείς να κάνεις προβλέψεις βάσει της τοποθεσίας και της ηλικίας μου, είτε βραχυπρόθεσμες είτε μακροπρόθεσμες."
+      },
+      "actions": {
+        "readPalm": "Ανάγνωση Παλάμης"
+      },
+      "messages": {
+        "uploadPrompt": "Γειά σας, παρακαλώ ανεβάστε μια φωτογραφία για να διαβάσω τη μαντεία σας.",
+        "loading": "Φορτώνει..."
+      },
+      "photoFeedback": {
+        "success": "Μπορείτε τώρα να μάθετε τη μαντεία σας!",
+        "failure": "Δεν ανιχνεύθηκε χέρι. Παρακαλώ βγάλτε μια πιο σαφή φωτογραφία."
+      },
+      "systemMessages": {
+        "loadingPhoto": "Η φωτογραφία ανεβαίνει...",
+        "modelNotLoaded": "Το μοντέλο δεν έχει φορτωθεί ακόμη. Παρακαλώ δοκιμάστε ξανά.",
+        "fortuneReady": "Η μαντεία σας είναι έτοιμη!",
+        "cupNotDetected": "Δεν ανιχνεύθηκε κούπα. Παρακαλώ βγάλτε μια πιο σαφή φωτογραφία.",
+        "errorSendingMessage": "Προέκυψε σφάλμα κατά την επικοινωνία με το Chatbot Μαντείας."
+      },
+      "userPrompts": {
+        "initialPrompt": "Γειά σας, παρακαλώ ανεβάστε μια φωτογραφία για να διαβάσω τη μαντεία σας.",
+        "coffeeReadingRequest": "Θέλω να διαβάσετε τη μαντεία του καφέ σας σαν να υπάρχει μια κούπα μπροστά σας. Διατυπώστε προτάσεις όπως ένας πραγματικός μάντης και κάντε προβλέψεις με βάση την τοποθεσία και την ηλικία μου."
+      },
+      "updateInfo": {
+        "title": "Ενημέρωση Πληροφοριών Σας",
+        "nameLabel": "Όνομα",
+        "namePlaceholder": "Εισάγετε το όνομά σας",
+        "emailLabel": "Email (Δεν μπορεί να αλλάξει)",
+        "emailPlaceholder": "Εισάγετε το email σας",
+        "birthDateLabel": "Ημερομηνία Γέννησης",
+        "birthDatePlaceholder": "Εισάγετε την ημερομηνία γέννησής σας",
+        "locationLabel": "Αλλαγή Πόλης",
+        "updateButton": "Ενημέρωση",
+        "passwordResetButton": "Αποστολή Email Επαναφοράς Κωδικού",
+        "userInfoNotFound": "Δεν βρέθηκαν πληροφορίες χρήστη.",
+        "sessionNotFound": "Δεν βρέθηκε συνεδρία χρήστη. Παρακαλώ συνδεθείτε.",
+        "updateSuccess": "Οι πληροφορίες σας ενημερώθηκαν επιτυχώς",
+        "updateFailure": "Παρουσιάστηκε σφάλμα κατά την ενημέρωση",
+        "resetMailSuccess": "Το email επαναφοράς κωδικού έχει αποσταλεί",
+        "resetMailFailure": "Παρουσιάστηκε σφάλμα κατά την αποστολή του email επαναφοράς κωδικού"
+      },
+      "forgotPassword": {
+        "title": "Ξέχασα τον Κωδικό μου",
+        "emailLabel": "Διεύθυνση Email",
+        "emailPlaceholder": "Εισάγετε το email σας",
+        "emailRequired": "Παρακαλώ εισάγετε τη διεύθυνση email σας.",
+        "submit": "Αποστολή",
+        "resetLinkSent": "Ένας σύνδεσμος επαναφοράς κωδικού έχει σταλεί στο email σας!",
+        "resetFail": "Αποτυχία αποστολής email επαναφοράς κωδικού: {error}"
+      },
+      "login": {
+        "title": "Σύνδεση",
+        "emailAddress": "Διεύθυνση Email",
+        "enterEmail": "Εισάγετε το email σας",
+        "password": "Κωδικός",
+        "enterPassword": "Εισάγετε τον κωδικό σας",
+        "forgotPassword": "Ξέχασα τον Κωδικό μου",
+        "logInButton": "Σύνδεση",
+        "resetPasswordButton": "Επαναφορά Κωδικού μου",
+        "emailRequired": "Παρακαλώ εισάγετε τη διεύθυνση email σας.",
+        "passwordRequired": "Παρακαλώ εισάγετε τον κωδικό σας.",
+        "success": "Επιτυχής σύνδεση!",
+        "invalidEmail": "Μη έγκυρη διεύθυνση email.",
+        "failed": "Η σύνδεση απέτυχε: ",
+        "alreadyHaveAccount": "Έχετε ήδη λογαριασμό;",
+        "login": "Σύνδεση",
+        "noAccount": "Δεν έχετε λογαριασμό;",
+        "signup": "Εγγραφή"
+      },
+      "alerts": {
+        "error": "Προέκυψε σφάλμα",
+        "unverified": "Ο λογαριασμός σας χρειάζεται επαλήθευση",
+        "verificationEmailSent": "Το email επαλήθευσης έχει αποσταλεί.",
+        "resetLinkSent": "Το email επαναφοράς έχει σταλεί."
+      },
+      "navigation": {
+        "coffeeFortune": "Μαντεία Καφέ",
+        "palmReading": "Ανάγνωση Παλάμης"
+      },
+      "pastReadings": {
+        "title": "Οι Προηγούμενες Αναγνώσεις Σας",
+        "noReadings": "Δεν έχετε καταγεγραμμένες αναγνώσεις ακόμη.",
+        "hideDetails": "Απόκρυψη Λεπτομερειών",
+        "viewDetails": "Προβολή Λεπτομερειών",
+        "cardImageAlt": "Εικόνα Ανάγνωσης"
+      },
+      "signup": {
+        "title": "Εγγραφή",
+        "namePlaceholder": "Εισάγετε το όνομά σας",
+        "emailPlaceholder": "Εισάγετε το email σας",
+        "passwordPlaceholder": "Εισάγετε τον κωδικό σας",
+        "birthDatePlaceholder": "Επιλέξτε την ημερομηνία γέννησής σας",
+        "locationPlaceholder": "Επιλέξτε μια πόλη",
+        "submit": "Εγγραφή",
+        "nameLabel": "Όνομα",
+        "emailLabel": "Email",
+        "passwordLabel": "Κωδικός",
+        "birthDateLabel": "Ημερομηνία Γέννησης",
+        "locationLabel": "Τοποθεσία"
+      },
+      "dashboard": {
+        "pastReadings": "Οι Προηγούμενες Αναγνώσεις Μου",
+        "membershipInfo": "Πληροφορίες Συνδρομής"
+      },
+      "logout": {
+        "success": "Έχετε αποσυνδεθεί επιτυχώς!"
+      },
+      "fortuneTypes": {
+        "coffee": "Μαντεία Καφέ",
+        "palm": "Ανάγνωση Παλάμης"
       }
-    }
   }
   
